--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-    "name": "eurostat.js",
-    "version": "0.9.16",
-    "description": "Some reusable Javascript libraries for Eurostat data users and web developers",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "webpack-dev-server --open --watch",
-      "build": "webpack --progress --mode=production",
-      "server": "webpack-dev-server --open"
-    },
-    "author": "",
-    "license": "EUPL 1.1",
-    "dependencies": {
-      "d3": "^5.14.2"
-    },
-    "devDependencies": {
-      "webpack": "^4.41.2",
-      "webpack-cli": "^3.3.10",
-      "webpack-dev-server": "^3.9.0"
-    }
+  "name": "eurostat.js",
+  "version": "0.9.16",
+  "description": "Some reusable Javascript libraries for Eurostat data users and web developers",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open --watch",
+    "build": "webpack --progress --mode=production",
+    "server": "webpack-dev-server --open"
+  },
+  "author": "",
+  "license": "EUPL 1.1",
+  "dependencies": {
+    "d3": "^5.14.2",
+    "colorbrewer": "^1.3.0",
+    "jquery": "^3.4.1",
+    "jquery-mousewheel": "^3.1.13",
+    "topojson-client": "^3.1.0",
+    "d3-legend": "^1.0.0",
+    "jsonstat-toolkit": "^1.0.8"
+  },
+  "devDependencies": {
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
-  
+}
