--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "eurostat.js",
   "version": "0.9.16",
   "description": "Some reusable Javascript libraries for Eurostat data users and web developers",
+  "keywords": [
+    "eurostat",
+    "statistics",
+    "europe",
+    "NUTS",
+    "map"
+  ],
+  "homepage": "https://github.com/eurostat/eurostat.js",
+  "author": "",
+  "license": "EUPL 1.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eurostat/eurostat.js.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,8 +23,6 @@
     "build": "webpack --progress --mode=production",
     "server": "webpack-dev-server --open"
   },
-  "author": "",
-  "license": "EUPL 1.1",
   "dependencies": {
     "d3": "^5.14.2",
     "colorbrewer": "^1.3.0",
