--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "homepage": "https://github.com/eurostat/eurostat.js",
   "author": "",
-  "license": "EUPL 1.1",
+  "license": "EUPL-1.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/eurostat/eurostat.js.git"
@@ -24,13 +24,13 @@
     "server": "webpack-dev-server --open"
   },
   "dependencies": {
-    "d3": "^5.14.2",
     "colorbrewer": "^1.3.0",
+    "d3": "^3.5.17",
+    "d3-legend": "^1.0.0",
     "jquery": "^3.4.1",
     "jquery-mousewheel": "^3.1.13",
-    "topojson-client": "^3.1.0",
-    "d3-legend": "^1.0.0",
-    "jsonstat-toolkit": "^1.0.8"
+    "jsonstat-toolkit": "^1.0.8",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
