--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --watch",
     "build": "webpack --progress --mode=production",
+    "buildd": "webpack --mode=development",
     "server": "webpack-dev-server --open"
   },
   "dependencies": {
