--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --watch",
-    "build": "webpack --progress --mode=production",
+    "build": "webpack --mode=production",
     "buildd": "webpack --mode=development",
     "server": "webpack-dev-server --open"
   },
