--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "colorbrewer": "^1.3.0",
     "d3": "^3.5.17",
+    "d3-queue": "^3.0.7",
     "d3-legend": "^1.0.0",
     "jquery": "^3.4.1",
     "jquery-mousewheel": "^3.1.13",
