--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eurostat.js",
-  "version": "0.9.20",
+  "version": "0.9.21",
   "description": "Some reusable Javascript libraries for Eurostat data users and web developers",
   "keywords": [
     "eurostat",
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "https://github.com/eurostat/eurostat.js.git"
   },
-  "main": "dist/index.js",
+  "main": "dist/eurostat.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --watch",
@@ -26,12 +26,10 @@
   },
   "dependencies": {
     "colorbrewer": "^1.3.0",
-    "d3": "^5.14.2",
+    "d3": "^5.15.0",
     "d3-svg-legend": "^2.25.6",
     "topojson-client": "^3.1.0",
-    "jsonstat-toolkit": "^1.0.8",
-    "jquery": "^3.4.1",
-    "jquery-mousewheel": "^3.1.13"
+    "jsonstat-toolkit": "^1.0.8"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
